bdr.BDR.scala.error
Compilation error:
BDR:2: error: type mismatch;
 found   : Char('a')
 required: String
var x:String='a'
             ^